--- a/src/test/resources/runner.properties
+++ b/src/test/resources/runner.properties
@@ -6,7 +6,7 @@ selenide.pageLoadTimeout=30000
 selenide.downloadsFolder=target/downloads
 selenide.savePageSource=false
 selenide.takescreenshots=false
-#selenide.remoteUrl=https://31001-port-23fcb235faaf4227.labs.kodekloud.com
+selenide.remoteUrl=http://localhost:4444
 influx.db.url=https://8086-port-4519883a3d714059.labs.kodekloud.com/
 
 #application properties
