--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: UI Test
 
 on:
   push:
@@ -12,15 +12,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: checkout of the repo
+      uses: actions/checkout@v3
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B clean test
+
+    - name: Docker cache
+      uses: satackey/action-docker-layer-caching@v0.0.11
+      continue-on-error: true
+
+    - name: setup Hub and nodes and execute the script
+      run: docker-compose -f "docker-compose.yml" up -d --build
+
+    - name: Stop the grid setup
+      if: always()
+      run: |
+        docker-compose -f "docker-compose.yml" down    
+   
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
