--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -29,12 +29,14 @@ jobs:
     - name: setup Hub and nodes and execute the script
       run: docker-compose -f "docker-compose.yml" up -d --build
 
+    - name wait for the test containers to exit
+        run: |
+            chmod a+x wait_for_exit.sh 
+            ./wait_for_exit.sh app_test
+        shell: bash
+        
     - name: Stop the grid setup
       if: always()
       run: |
         docker-compose -f "docker-compose.yml" down    
    
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
