--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -1,23 +1,19 @@
----
 name: UI Test
+
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
-
-
+    branches: [ "main" ]
+permissions:
+  id-token: write
+  pages: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
-
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
-      
-    permissions:
-        contents: write
 
     steps:
       - name: checkout of the repo
@@ -26,8 +22,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: "17"
-          distribution: temurin
+          java-version: '17'
+          distribution: 'temurin'
           cache: maven
 
       - name: Docker cache
@@ -39,18 +35,38 @@ jobs:
 
       - name: wait for the test containers to exit
         run: |
-          chmod a+x wait_for_exit.sh 
-          ./wait_for_exit.sh app_test
+            chmod a+x wait_for_exit.sh 
+            ./wait_for_exit.sh app_test
         shell: bash
+
+      #- name: Deploy the test output
+      #    uses: peaceiris/actions-gh-pages@v3
+      #    if: github.ref == 'refs/heads/main'
+      #    with:
+       #     github_token: ${{ secrets.GITHUB_TOKEN }}
+       #     publish_dir: ./output/reports
 
       - name: Stop the grid setup
         if: always()
         run: |
-          docker-compose -f "docker-compose.yml" down    
+          docker-compose -f "docker-compose.yml" down  
 
-      - name: Deploy the html result
-        uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/main'
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./output/reports
+          # Upload entire repository
+          path: './output/reports '
+  deploy:
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v3
