--- a/grid-k8/deployment/deployment-hub.yml
+++ b/grid-k8/deployment/deployment-hub.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hub-deployment
-  namespace: keda
+  namespace: ui-test-job
   labels:
     name: hub-deploy
     app: grid
