--- a/grid-k8/service/service-hub.yml
+++ b/grid-k8/service/service-hub.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: selenium-hub
-  namespace: keda
+  namespace: ui-test-job
   labels:
     name: grid-services
     app: grid
